erDiagram
    Users ||--o{ Events : "Organizes"
    Users ||--o{ Registrations : "Enrolls in"
    Events ||--o{ Registrations : "Has participants"
    Registrations ||--|| Certificates : "Generates"

    Users {
        string user_id PK
        string name
        string email
        string role "Organizer/Participant"
    }

    Events {
        string event_id PK
        string organizer_id FK
        string title
        string venue
        date event_date
        int max_capacity
    }

    Registrations {
        string registration_id PK
        string user_id FK
        string event_id FK
        string ticket_id
        boolean checked_in_status
    }

    Certificates {
        string certificate_id PK
        string registration_id FK
        string pdf_url
        datetime issue_date
    }
